styles.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Comfortaa', cursive;
}

body {
    background-color: #e1e5ec;
    color: #FAFAFA;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    padding: 20px 40px 20px 20px;
    background-color: #e1e5ec;
    color: #1d2027;
    border-bottom: 5px solid #ff8e27;
}

header .title-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header .title-container .material-icons {
    font-size: 30px;
    color: #ff8e27;
}

header .title-container h1 {
    padding-left: 10px;
    font-size: 27px;
}

header .input-container {
    position: relative;
}

header .input-container input {
    padding: 7px 35px 7px 15px;
    border-radius: 15px;
    border: none;
    box-shadow: 0 0 4px 0px rgba(0, 0, 0, .3);
}

header .input-container input:focus {
    outline: 2px solid #1d2027;
}

header .input-container .material-icons {
    position: absolute;
    top: 50%;
    right: 5px;
    transform: translate(0, -50%);
    font-size: 22px;
    color: #1d2027;
    font-weight: 600;
}

#root {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-auto-rows: minmax(200px, auto);
    grid-auto-flow: dense;
    /* 100vh - header height */
    height: calc(100vh - 78px);
    padding: 20px;
    gap: 20px;
    overflow-y: auto;
}

#root .image {
    background-position: center;
    background-size: cover;
    background-color: #b3bac5;
    border-radius: 3px;
    transition: 300ms transform ease-in-out;
    cursor: pointer;
}

#root .image:hover {
    transform: scale(1.02);
}

.error-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.error-message {
    font-size: 30px;
    color: #1d2027;
}

.column-span {
    grid-column: span 2;
}

.row-span {
    grid-row: span 2;
}

.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-position: center;
    background-size: cover;
    border-radius: 7px;
    box-shadow: 0 0 50px 1000px rgba(0, 0, 0, .5);
}

.modal-landscape {
    width: 900px;
    height: 500px;
}

.modal-portrait {
    width: 300px;
    height: 600px;
}

.modal .material-icons {
    float: right;
    margin-top: 7px;
    margin-right: 7px;
    cursor: pointer;
}

@media all and (max-width: 496px) {
    
    header {
        justify-content: center;
        padding: 20px;
    }

    header .input-container {
        margin-top: 7px;
    }
}

